# dominium

./: .agentignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_CHANGE_JUSTIFICATION.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  DOMINIUM.md  FAN_CONTENT_POLICY.md  GOVERNANCE.md  LICENSE.md  MODDING.md  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  __tmp_ok.c  __tmp_test.c  _grep.py  _search.py  _tmp.py  _tmp.txt  _tmp_check.py  _tmp_search.py  build_output.txt  build_stderr.txt  casualty_config  cc_out.txt  core_err.txt  gpp_err.txt  handle  hwnd  inventory  meta_extensions_engine.py  op  (+9 more)
app/: CMakeLists.txt  compat_report.c  readonly_format.c
app/src/: app_runtime.c  compat_report.c  readonly_adapter.c  readonly_format.c  ui_event_log.c  ui_presentation.c
apps/client/: CMakeLists.txt  __init__.py  main_client.c
apps/server/: CMakeLists.txt  main_server.c  server_boot.py  server_console.py  server_main.py
client/: CMakeLists.txt  main_client.c
client/adapters/: client_fs_adapter.c  client_fs_adapter.h
client/app/: main_client.c
client/core/: client_command_bridge.c  client_commands_registry.c  client_models_options.c  client_models_options.h  client_models_server.h  client_models_world.c  client_models_world.h  client_state_machine.c  client_state_machine.h  session_artifacts.c  session_artifacts.h  session_pipeline.c  session_pipeline.h  session_refusal_codes.c  session_refusal_codes.h  session_stage_registry.c  session_stage_registry.h
client/gui/: client_app_win32.cpp
client/input/: client_input_bindings.c  client_input_bindings.h
client/interaction/: __init__.py  affordance_generator.py  interaction_panel.py
client/local_server/: __init__.py  local_server_controller.py
client/modes/: client_mode_cli.c  client_mode_cli.h  client_mode_gui.c  client_mode_gui.h  client_mode_tui.c  client_mode_tui.h
client/observability/: perceived_model_v1.c  perceived_model_v1.h  readonly_view_model.h
client/presentation/: frame_graph_builder.cpp  frame_graph_builder.h  render_model_adapter_v1.c  render_model_v1.h  render_prep_system.cpp  render_prep_system.h  ui_host_v1.c  ui_host_v1.h
client/render/: __init__.py  representation_resolver.py  snapshot_capture.py
client/shell/: client_shell.c  client_shell.h
client/ui/: __init__.py  client_ui_compositor.c  client_ui_compositor.h  inspect_panels.py  main_menu_surface.py  map_views.py  teleport_controller.py  viewer_shell.py
engine/: CMakeLists.txt  core_ids.h  core_types.h  dom_build_version.h  dom_engine_stub.c  engine_api.c  registry_material.c  registry_material.h  registry_recipe.h  save_region.c  save_region.h  save_tlv.c  save_tlv.h  save_universe.h  sim_systems.c  sim_systems.h  world_addr.h  world_fields.c  world_fields.h  world_geom.h  world_surface.c
engine/audio/: dom_audio_api.c
engine/compatibility/: schema_registry.py  validator.py
engine/compatx/: __init__.py  schema_registry.py  validator.py  versioning.py
engine/concurrency/: __init__.py
engine/core/: CMakeLists.txt  dom_core_bits.c  dom_core_bits.h  dom_core_fp.c  dom_core_fp.h  dom_core_id.c  dom_core_log.c  dom_core_log.h  dom_core_mem.c  dom_core_mem.h  dom_core_rng.c  dom_core_rng.h  dom_core_types.c  dom_core_types.h
engine/execution/: README.md  budget_model.cpp  execution_context.cpp  execution_policy.cpp  kernel_iface.c
engine/export/: export_engine.py
engine/import/: import_engine.py
engine/kernel/: core.c  core_internal.h  d_account.c  d_account.h  d_container_state.c  d_container_state.h  d_model.c  d_model.h  d_org.c  d_org.h  d_org_validate.c  d_registry.c  d_registry.h  d_serialize_tags.h  d_subsystem.c  d_subsystem.h  d_subsystems_init.c  d_tlv.h  d_tlv_kv.c  d_tlv_kv.h  d_tlv_schema.c  d_tlv_schema.h  det_invariants.h  det_order.c  det_reduce.c  dg_det_hash.c  dg_det_hash.h  dg_order_key.c  dg_order_key.h  dg_pose.c  dg_pose.h  dg_quant.c  dg_quant.h  dom_build_info.c  dom_control.c  dom_deterministic_math.c  dom_deterministic_math.h  dom_ledger_accounts.c  dom_ledger_aggregate.c  dom_ledger_core.c  (+26 more)
engine/platform/: __init__.py  _canonical.py  dom_platform.h  platform_input.py  platform_probe.py
engine/render/: CMakeLists.txt  backend_detect.c  d_gfx.c  d_gfx_caps.h  d_gfx_caps_stub.c  dgfx_trace.c  dom_render_api.c  dom_render_api.h  dom_render_debug.c  dom_render_dx9.c  dom_render_dx9.h  dom_render_null.c  dom_render_null.h
engine/replay/: d_replay.c  d_replay.h
engine/serialization/: __init__.py  canonical_json.py
engine/session/: __init__.py  common.py
engine/sim/: CMakeLists.txt  dom_sim_ecs.c  dom_sim_ecs.h  dom_sim_events.c  dom_sim_events.h  dom_sim_jobs.c  dom_sim_jobs.h  dom_sim_tick.c  dom_sim_tick.h  dom_sim_time.c  dom_sim_time.h  dom_sim_world.c  dom_sim_world.h
engine/state/: state.c
engine/store/: gc_engine.py
engine/tests/: CMakeLists.txt  agent_foundation_contract_tests.cpp  agent_mvp_core_tests.cpp  agent_mvp_social_tests.cpp  budget_model_tests.cpp  domain_volume_tests.cpp  ecs_packed_view_tests.cpp  ecs_soa_storage_tests.cpp  ecs_storage_iface_tests.cpp  engine_data_validate_test.c  engine_det_order_test.c  engine_due_sched_test.c  engine_perf_budget_test.c  engine_perf_no_modal_test.c  engine_smoke_test.c  execution_contract_tests.cpp  execution_equivalence_tests.cpp  execution_ir_tests.cpp  execution_perf_regression_tests.cpp  (+16 more)
game/: CMakeLists.txt  dominium_game_stub.c
launcher/: CMakeLists.txt  launcher_main.cpp
libs/: CMakeLists.txt
server/: CMakeLists.txt  main_server.c  server_console.py  server_main.py
setup/: CMakeLists.txt
shared_ui_win32/: CMakeLists.txt
source/: CMakeLists.txt
tests/: CMakeLists.txt  EXPECTED_FAILS.md  launcher_discovery_test.cpp  manifest_io_test.cpp  setup_flow_test.cpp  test_stub.c  test_version.h  tests_runner.c  validation_tiers.json
tools/: CMakeLists.txt  __init__.py  coredata_compile_stub.c  coredata_validate_stub.c  import_bridge.py  tool_surface_adapter.py  tools_host_main.c  tools_main.c  validate_dist.cmake
(+28262 files in other folders)
